--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Systock
+application.vendor=ACER
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/Systock.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Systock
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.25.jar=lib\\mysql-connector-java-8.0.25.jar
 file.reference.mysql-connector-java-8.0.25.zip=lib\\mysql-connector-java-8.0.25.zip
@@ -40,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.25.zip}:\
-    ${file.reference.mysql-connector-java-8.0.25.jar}
+    ${file.reference.mysql-connector-java-8.0.25.jar}:\
+    ${libs.MyLibrary.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
