--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,7 +1,8 @@
-libs.absolutelayout.classpath=\
-    ${base}/absolutelayout/AbsoluteLayout.jar
 libs.absolutelayout.displayName=Absolute Layout
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=3.0
+libs.MyLibrary.classpath=\
+    ${base}/MyLibrary/mysql-connector-java-8.0.25.jar
+libs.MyLibrary.displayName=MyLibrary
