--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,8 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Systock
 endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
+file.reference.junit-4.12.jar=lib/junit-4.12.jar
 file.reference.mysql-connector-java-8.0.25.jar=lib\\mysql-connector-java-8.0.25.jar
 file.reference.mysql-connector-java-8.0.25.zip=lib\\mysql-connector-java-8.0.25.zip
 includes=**
@@ -42,6 +44,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.25.zip}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.12.jar}:\
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
     ${libs.MyLibrary.classpath}
 # Space-separated list of extra javac options
