--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/Systock
 endorsed.classpath=
 excludes=
 file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
+file.reference.jasperreports-6.17.0-project.zip=lib\\jasperreports-6.17.0-project.zip
 file.reference.junit-4.12.jar=lib/junit-4.12.jar
 file.reference.mysql-connector-java-8.0.25.jar=lib\\mysql-connector-java-8.0.25.jar
 file.reference.mysql-connector-java-8.0.25.zip=lib\\mysql-connector-java-8.0.25.zip
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.hamcrest-core-1.3.jar}:\
     ${file.reference.junit-4.12.jar}:\
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
-    ${libs.MyLibrary.classpath}
+    ${libs.MyLibrary.classpath}:\
+    ${file.reference.jasperreports-6.17.0-project.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
